--- a/index.html
+++ b/index.html
@@ -1,69 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&display=swap" rel="stylesheet">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+   <style>
+      .title {
+         font-family: 'Raleway', cursive;
+         font-family: 'Roboto', cursive;
+      }
+   </style>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>WebStudio</title>
+   <link rel="stylesheet" href="./css/styles.css" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
 </head>
-<body>
+<body class="main">
    <header>
     <nav>
-    <a href="./index.html">WebStudio</a>
-        <ul>
-            <li><a href="./"> Studio</a></li>
-            <li><a href="./">Portfolio</a></li>
-            <li><a href="./">Contacts</a></li>
+    <a class="logo" href="./index.html"><span class="logo1">Web</span><span class="logo2">Studio</span></a>
+        <ul class="navigation-list">
+            <li ><a  class="navigation"href="./">Studio</a></li>
+            <li class="nav_el"><a  class="navigation"href="./">Portfolio</a></li>
+            <li class="nav_el"><a  class="navigation"href="./">Contacts</a></li>
         </ul>
      </nav>
-     <address><ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-     <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+     <address><ul class="contact-list">
+        <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
+     <li><a href="tel:+110001111111" class="contact" >+11 (000) 111-11-11</a></li>
     </ul></address>
    </header> 
    <main>
-   <section> <h1>Effective Solutions
+   <section> <h1 class="hero-title">Effective Solutions
     for Your Business</h1>
-      <button type="button">Order Service</button></section>
-   <section><h2>Lorem, ipsum dolor.</h2><ul>
-     <li><h3> Strategy</h3>
-    <p> Our goal is to identify the business
+      <button type="button" class="button">Order Service</button></section>
+   <section><h2 hidden>Lorem, ipsum dolor.</h2>
+   <ul class="text">
+     <li><h3 class="header3"> Strategy</h3>
+    <p class="text"> Our goal is to identify the business
     problem to walk away with the perfect and creative solution.</p></li>
-    <li><h3>Punctuality</h3>
-    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+    <li><h3 class="header3">Punctuality</h3>
+    <p class="text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
     </li>
-    <li><h3>Diligence</h3>
-    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+    <li><h3 class="header3">Diligence</h3>
+    <p class="text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
     </li>
-    <li><h3>Technologies</h3>
-    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+    <li><h3 class="header3">Technologies</h3>
+    <p class="text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
     </li>
     </ul></section>
-    <section><h2>What are we doing</h2> <ul>
+    <section><h2 class="header2">What are we doing</h2> 
+    <ul class="pic_list">
     <li><img src="./images/image1.jpg" alt="Charts on a computer screen" width="360"></li>
     <li><img src="./images/image2.jpg" alt="Four phone screens" width="360"></li>
     <li><img src="./images/image3.jpg" alt="Opened article on a phone screen" width="360"> </li></ul></section>
-    <section><h2>Our Team</h2>
-    <ul>
+    <section><h2 class="header2">Our Team</h2>
+    <ul class="pic_list">
     <li> <img src="./images/mark.jpg" alt="Mark Guerrero" width="264">
-    <h3>Mark Guerrero</h3>
+    <h3 class="header3">Mark Guerrero</h3>
     <p>Product Designer</p></li>
     <li><img src="./images/tom.jpg" alt="Tom Ford" width="264">
-    <h3>Tom Ford</h3>
+    <h3 class="header3">Tom Ford</h3>
     <p>Frontend Developer</p>
     </li>
     <li><img src="./images/camila.jpg" alt="Camila Garcia" width="264">
-    <h3>Camila Garcia</h3>
+    <h3 class="header3">Camila Garcia</h3>
     <p>Marketing</p></li>
     <li><img src="./images/daniel.jpg" alt="Daniel Wilson" width="264">
-    <h3>Daniel Wilson</h3>
+    <h3 class="header3">Daniel Wilson</h3>
     <p>UI Designer</p></li>
     </ul></section>
    </main>
 
    <footer>
-    <a href="./index.html">WebStudio</a>
-    <p> Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <a class="logo" href="./index.html"><span class="logo1">Web</span><span class="logo2">Studio</span></a>
+    <p class="footer_desc"> Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
    </footer>
 
 </body>
