--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a class="logo" href="./index.html"><span class="logo1">Web</span><span class="logo2">Studio</span></a>
         <ul class="navigation-list">
             <li ><a  class="navigation"href="./">Studio</a></li>
-            <li class="nav_el"><a  class="navigation"href="./">Portfolio</a></li>
+            <li class="nav_el"><a  class="navigation"href="./portfolio.html">Portfolio</a></li>
             <li class="nav_el"><a  class="navigation"href="./">Contacts</a></li>
         </ul>
      </nav>
