--- a/portfolio.html
+++ b/portfolio.html
@@ -14,9 +14,7 @@
         font-family: 'Roboto', cursive;
     }
 </style>
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>WebStudio</title>
+
 <link rel="stylesheet" href="./css/styles.css" />
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,31 +41,30 @@
     </header>
     <main>
       <ul class="navigation-list">
-          <li><button class="filter1" type="button">All</button></li>
-          <img src="./images/hand.png" alt="hand">
+          <li><button class="filter" type="button">All</button></li>
           <li><button type="button" class="filter2">Web Site</button></li>
-          <li><button class="filter2" type="button">App</button></li>
-          <li><button class="filter2" type="button">Design</button></li>
-          <li><button class="filter2" type="button">Marketing</button></li>
+          <li><button class="filter" type="button">App</button></li>
+          <li><button class="filter" type="button">Design</button></li>
+          <li><button class="filter" type="button">Marketing</button></li>
       </ul>
       <ul class="pic_list">
-        <li><a class="link" href=".\"><img src="images\image4.jpg" alt="Phone screen showing an app" width="360">
+        <li><a class="link" href="./"><img src="images/image4.jpg" alt="Phone screen showing an app" width="360">
         <h3 class="header3">Banking App Interface Concept</h3><p class="text"> App</p></a></li>
-    <li><a class="link" href=".\"><img src="images\image5.jpg" alt="Phone screen with a QR code on it" width="360">
+    <li><a class="link" href="./"><img src="images/image5.jpg" alt="Phone screen with a QR code on it" width="360">
        <h3 class="header3">Cashless Payment</h3><p class="text">Marketing</p></a></li>
-    <li><a class="link" href=".\"><img src="images\image6.jpg" alt="Phone and laptop screens" width="360">
+    <li><a class="link" href="./"><img src="images/image6.jpg" alt="Phone and laptop screens" width="360">
      <h3 class="header3">Meditation App</h3><p class="text">App</p></a></li>
-    <li><a class="link" href=".\"><img src="images\image7.jpg" alt="Hands on a steering wheel" width="360">
+    <li><a class="link" href="./"><img src="images/image7.jpg" alt="Hands on a steering wheel" width="360">
     <h3 class="header3">Taxi Service</h3><p class="text">Marketing</p></a></li>
-    <li><a class="link" href=".\"><img src="images\image8.jpg" alt="Five phone screens" width="360">
+    <li><a class="link" href="./"><img src="images/image8.jpg" alt="Five phone screens" width="360">
     <h3 class="header3">Screen Illustrations</h3><p class="text">Design</p></a></li>
-    <li><a class="link" href=".\"><img src="images\image9.jpg" alt="Girl looking on a phone screen and smiling" width="360">
+    <li><a class="link" href="./"><img src="images/image9.jpg" alt="Girl looking on a phone screen and smiling" width="360">
     <h3 class="header3">Online Courses</h3><p class="text">Marketing</p></a></li>
-    <li><a class="link" href=".\"><img src="images\image10.jpg" alt="Samples of Instagram stories" width="360">
+    <li><a class="link" href="./"><img src="images/image10.jpg" alt="Samples of Instagram stories" width="360">
     <h3 class="header3">Instagram Stories Concept</h3><p class="text">Design</p></a></li>
-    <li><a class="link" href=".\"><img src="images\image11.jpg" alt="A woman carrying a grocery bag" width="360">
+    <li><a class="link" href="./"><img src="images/image11.jpg" alt="A woman carrying a grocery bag" width="360">
     <h3 class="header3">Organic Food</h3><p class="text">Web Site</p></a></li>
-    <li><a class="link" href=".\"><img src="images\image12.jpg" alt="Barista making coffee" width="360">
+    <li><a class="link" href="./"><img src="images/image12.jpg" alt="Barista making coffee" width="360">
     <h3 class="header3">Fresh Coffee</h3><p class="text">Web Site</p></a></li>
       </ul>
 
