--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
     <main>
       <ul class="navigation-list">
           <li><button class="filter" type="button">All</button></li>
-          <li><button type="button" class="filter2">Web Site</button></li>
+          <li><button type="button" class="filter">Web Site</button></li>
           <li><button class="filter" type="button">App</button></li>
           <li><button class="filter" type="button">Design</button></li>
           <li><button class="filter" type="button">Marketing</button></li>
