--- a/portfolio.html
+++ b/portfolio.html
@@ -25,19 +25,19 @@
 <body class="main">
     <header>
     <nav>
-        <a class="logo" href="./index.html"><span class="logo1">Web</span><span class="logo2">Studio</span></a>
-        <ul class="navigation-list">
-            <li><a class="navigation" href="./">Studio</a></li>
-            <li class="nav_el"><a class="navigation" href="./">Portfolio</a></li>
-            <li class="nav_el"><a class="navigation" href="./">Contacts</a></li>
+        <a class="logo" class="link" href="./index.html">Web<span class="logo1">Studio</span></a>
+        <ul class="list">
+            <li class="nav-link" ><a class="contact" class="link" href="./index.html">Studio</a></li>
+            <li class="nav-link" ><a class="contact" class="link" href="./portfolio.html">Portfolio</a></li>
+            <li class="nav-link" ><a class="contact" class="link" href="">Contacts</a></li>
         </ul>
     </nav>
-    <address>
-        <ul class="contact-list">
-            <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111" class="contact">+11 (000) 111-11-11</a></li>
-        </ul>
-    </address>
+<address>
+    <ul class="list">
+        <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
+        <li><a href="tel:+110001111111" class="contact">+11 (000) 111-11-11</a></li>
+    </ul>
+</address>
     </header>
     <main>
       <ul class="navigation-list">
