--- a/index.html
+++ b/index.html
@@ -24,26 +24,28 @@
 </head>
 <body class="main">
    <header>
-    <nav>
-    <a class="logo" href="./index.html"><span class="logo1">Web</span><span class="logo2">Studio</span></a>
-        <ul class="navigation-list">
-            <li ><a  class="navigation" href="./">Studio</a></li>
-            <li class="nav_el"><a  class="navigation" href="./portfolio.html">Portfolio</a></li>
-            <li class="nav_el"><a  class="navigation" href="./">Contacts</a></li>
-        </ul>
-     </nav>
-     <address><ul class="contact-list">
-        <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
-     <li><a href="tel:+110001111111" class="contact" >+11 (000) 111-11-11</a></li>
-    </ul></address>
-   </header> 
+      <nav>
+         <a class="logo" class="link" href="./index.html">Web<span class="logo1">Studio</span></a>
+         <ul class="list">
+            <li class="nav-link"><a class="contact" class="link" href="./index.html">Studio</a></li>
+            <li class="nav-link"><a class="contact" class="link" href="./portfolio.html">Portfolio</a></li>
+            <li class="nav-link"><a class="contact" class="link" href="">Contacts</a></li>
+         </ul>
+      </nav>
+      <address>
+         <ul class="list">
+            <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111" class="contact">+11 (000) 111-11-11</a></li>
+         </ul>
+      </address>
+   </header>
    <main>
-   <section> <h1 class="hero-title">Effective Solutions
+   <section class="section1"> <h1 class="hero-title">Effective Solutions
     for Your Business</h1>
       <button type="button" class="button">Order Service</button></section>
    <section><h2 hidden>Lorem, ipsum dolor.</h2>
-   <ul class="text">
-     <li><h3 class="header3"> Strategy</h3>
+   <ul class="list" class="text">
+     <li><h3 class="header3">Strategy</h3>
     <p class="text"> Our goal is to identify the business
     problem to walk away with the perfect and creative solution.</p></li>
     <li><h3 class="header3">Punctuality</h3>
