--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
          font-family: 'Raleway', cursive;
          font-family: 'Roboto', cursive;
       }
+   body {font-family: "Roboto", sans-serif;
+         color: #434455;
+         background-color:#730808}
    </style>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
