--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       }
    body {font-family: "Roboto", sans-serif;
          color: #434455;
-         background-color:#730808}
+         background-color:#FFFFFF}
    </style>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -35,7 +35,7 @@
             <li class="nav-link"><a class="contact" class="link" href="">Contacts</a></li>
          </ul>
       </nav>
-      <address>
+      <address class="contact">
          <ul class="list">
             <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
             <li><a href="tel:+110001111111" class="contact">+11 (000) 111-11-11</a></li>
