--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
             <li class="nav-link" ><a class="contact" class="link" href="">Contacts</a></li>
         </ul>
     </nav>
-<address>
+<address  class="contact-nav">
     <ul class="list">
         <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
         <li><a href="tel:+110001111111" class="contact">+11 (000) 111-11-11</a></li>
