--- a/portfolio.html
+++ b/portfolio.html
@@ -24,20 +24,20 @@
 
 <body class="main">
     <header>
-    <nav>
-        <a class="logo" class="link" href="./index.html">Web<span class="logo1">Studio</span></a>
-        <ul class="list">
-            <li class="nav-link" ><a class="contact" class="link" href="./index.html">Studio</a></li>
-            <li class="nav-link" ><a class="contact" class="link" href="./portfolio.html">Portfolio</a></li>
-            <li class="nav-link" ><a class="contact" class="link" href="">Contacts</a></li>
-        </ul>
-    </nav>
-<address  class="contact-nav">
-    <ul class="list">
-        <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111" class="contact">+11 (000) 111-11-11</a></li>
-    </ul>
-</address>
+        <nav>
+            <a class="logo" class="link" href="./index.html">Web<span class="logo1">Studio</span></a>
+            <ul class="list">
+                <li class="nav-link"><a class="nav" class="link" href="./index.html">Studio</a></li>
+                <li class="nav-link"><a class="nav" class="link" href="./portfolio.html">Portfolio</a></li>
+                <li class="nav-link"><a class="nav" class="link" href="">Contacts</a></li>
+            </ul>
+        </nav>
+        <address class="contact">
+            <ul class="list">
+                <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="contact">+11 (000) 111-11-11</a></li>
+            </ul>
+        </address>
     </header>
     <main>
       <ul class="navigation-list">
