--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <nav>
          <a class="logo" class="link" href="./index.html">Web<span class="logo1">Studio</span></a>
          <ul class="list">
-            <li class="nav-link"><a class="contact" class="link" href="./index.html">Studio</a></li>
-            <li class="nav-link"><a class="contact" class="link" href="./portfolio.html">Portfolio</a></li>
-            <li class="nav-link"><a class="contact" class="link" href="">Contacts</a></li>
+            <li class="nav-link"><a class="nav" class="link" href="./index.html">Studio</a></li>
+            <li class="nav-link"><a class="nav" class="link" href="./portfolio.html">Portfolio</a></li>
+            <li class="nav-link"><a class="nav" class="link" href="">Contacts</a></li>
          </ul>
       </nav>
       <address class="contact">
