--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body class="main">
    <header>
       <nav>
-         <a class="logo" class="link" href="./index.html">Web<span class="logo1">Studio</span></a>
+         <a class="logo" class="link" href="./index.html">Web<span class="logo-one">Studio</span></a>
          <ul class="list">
             <li class="nav-link"><a class="nav" class="link" href="./index.html">Studio</a></li>
             <li class="nav-link"><a class="nav" class="link" href="./portfolio.html">Portfolio</a></li>
@@ -43,50 +43,50 @@
       </address>
    </header>
    <main>
-   <section class="section1"> <h1 class="hero-title">Effective Solutions
+   <section class="section-one"> <h1 class="header-one">Effective Solutions
     for Your Business</h1>
       <button type="button" class="button">Order Service</button></section>
    <section><h2 hidden>Lorem, ipsum dolor.</h2>
    <ul class="list" class="text">
-     <li><h3 class="header3">Strategy</h3>
+     <li><h3 class="header-three">Strategy</h3>
     <p class="text"> Our goal is to identify the business
     problem to walk away with the perfect and creative solution.</p></li>
-    <li><h3 class="header3">Punctuality</h3>
+    <li><h3 class="header-three>Punctuality</h3>
     <p class="text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
     </li>
-    <li><h3 class="header3">Diligence</h3>
+    <li><h3 class="header-three">Diligence</h3>
     <p class="text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
     </li>
-    <li><h3 class="header3">Technologies</h3>
+    <li><h3 class="header-three">Technologies</h3>
     <p class="text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
     </li>
     </ul></section>
-    <section><h2 class="header2">What are we doing</h2> 
-    <ul class="pic_list">
+    <section><h2 class="header-two">What are we doing</h2> 
+    <ul class="pic-list">
     <li><img src="./images/image1.jpg" alt="Charts on a computer screen" width="360"></li>
     <li><img src="./images/image2.jpg" alt="Four phone screens" width="360"></li>
     <li><img src="./images/image3.jpg" alt="Opened article on a phone screen" width="360"> </li></ul></section>
     <section><h2 class="header2">Our Team</h2>
-    <ul class="pic_list">
+    <ul class="pic-list">
     <li> <img src="./images/mark.jpg" alt="Mark Guerrero" width="264">
-    <h3 class="header3">Mark Guerrero</h3>
+    <h3 class="header-three">Mark Guerrero</h3>
     <p>Product Designer</p></li>
     <li><img src="./images/tom.jpg" alt="Tom Ford" width="264">
-    <h3 class="header3">Tom Ford</h3>
+    <h3 class="header-three">Tom Ford</h3>
     <p>Frontend Developer</p>
     </li>
     <li><img src="./images/camila.jpg" alt="Camila Garcia" width="264">
-    <h3 class="header3">Camila Garcia</h3>
+    <h3 class="header-three">Camila Garcia</h3>
     <p>Marketing</p></li>
     <li><img src="./images/daniel.jpg" alt="Daniel Wilson" width="264">
-    <h3 class="header3">Daniel Wilson</h3>
+    <h3 class="header-three">Daniel Wilson</h3>
     <p>UI Designer</p></li>
     </ul></section>
    </main>
 
    <footer>
-    <a class="logo" href="./index.html"><span class="logo1">Web</span><span class="logo2">Studio</span></a>
-    <p class="footer_desc"> Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <a class="logo" href="./index.html"><span class="logo1">Web</span><span class="logo-two">Studio</span></a>
+    <p class="footer-desc"> Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
    </footer>
 
 </body>
