--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
 <body class="main">
     <header>
         <nav>
-            <a class="logo" class="link" href="./index.html">Web<span class="logo1">Studio</span></a>
+            <a class="logo" class="link" href="./index.html">Web<span class="logo-one">Studio</span></a>
             <ul class="list">
                 <li class="nav-link"><a class="nav" class="link" href="./index.html">Studio</a></li>
                 <li class="nav-link"><a class="nav" class="link" href="./portfolio.html">Portfolio</a></li>
@@ -40,38 +40,38 @@
         </address>
     </header>
     <main>
-      <ul class="navigation-list">
+      <ul class="list">
           <li><button class="filter" type="button">All</button></li>
           <li><button type="button" class="filter">Web Site</button></li>
           <li><button class="filter" type="button">App</button></li>
           <li><button class="filter" type="button">Design</button></li>
           <li><button class="filter" type="button">Marketing</button></li>
       </ul>
-      <ul class="pic_list">
+      <ul class="pic-list">
         <li><a class="link" href="./"><img src="images/image4.jpg" alt="Phone screen showing an app" width="360">
-        <h3 class="header3">Banking App Interface Concept</h3><p class="text"> App</p></a></li>
+        <h3 class="header-three">Banking App Interface Concept</h3><p class="text"> App</p></a></li>
     <li><a class="link" href="./"><img src="images/image5.jpg" alt="Phone screen with a QR code on it" width="360">
-       <h3 class="header3">Cashless Payment</h3><p class="text">Marketing</p></a></li>
+       <h3 class="header-three">Cashless Payment</h3><p class="text">Marketing</p></a></li>
     <li><a class="link" href="./"><img src="images/image6.jpg" alt="Phone and laptop screens" width="360">
-     <h3 class="header3">Meditation App</h3><p class="text">App</p></a></li>
+     <h3 class="header-three">Meditation App</h3><p class="text">App</p></a></li>
     <li><a class="link" href="./"><img src="images/image7.jpg" alt="Hands on a steering wheel" width="360">
-    <h3 class="header3">Taxi Service</h3><p class="text">Marketing</p></a></li>
+    <h3 class="header-three">Taxi Service</h3><p class="text">Marketing</p></a></li>
     <li><a class="link" href="./"><img src="images/image8.jpg" alt="Five phone screens" width="360">
-    <h3 class="header3">Screen Illustrations</h3><p class="text">Design</p></a></li>
+    <h3 class="header-three">Screen Illustrations</h3><p class="text">Design</p></a></li>
     <li><a class="link" href="./"><img src="images/image9.jpg" alt="Girl looking on a phone screen and smiling" width="360">
-    <h3 class="header3">Online Courses</h3><p class="text">Marketing</p></a></li>
+    <h3 class="header-three">Online Courses</h3><p class="text">Marketing</p></a></li>
     <li><a class="link" href="./"><img src="images/image10.jpg" alt="Samples of Instagram stories" width="360">
-    <h3 class="header3">Instagram Stories Concept</h3><p class="text">Design</p></a></li>
+    <h3 class="header-three">Instagram Stories Concept</h3><p class="text">Design</p></a></li>
     <li><a class="link" href="./"><img src="images/image11.jpg" alt="A woman carrying a grocery bag" width="360">
-    <h3 class="header3">Organic Food</h3><p class="text">Web Site</p></a></li>
+    <h3 class="header-three">Organic Food</h3><p class="text">Web Site</p></a></li>
     <li><a class="link" href="./"><img src="images/image12.jpg" alt="Barista making coffee" width="360">
-    <h3 class="header3">Fresh Coffee</h3><p class="text">Web Site</p></a></li>
+    <h3 class="header-three">Fresh Coffee</h3><p class="text">Web Site</p></a></li>
       </ul>
 
     </main>
     <footer>
-    <a class="logo" href="./index.html"><span class="logo1">Web</span><span class="logo2">Studio</span></a>
-    <p class="footer_desc"> Increase the flow of customers and sales for your business with digital marketing & growth
+    <a class="logo" href="./index.html"><span class="logo1">Web</span><span class="logo-two">Studio</span></a>
+    <p class="footer-desc"> Increase the flow of customers and sales for your business with digital marketing & growth
     solutions.</p>
     </footer>
     </body>
