--- a/portfolio.html
+++ b/portfolio.html
@@ -40,6 +40,7 @@
         </address>
     </header>
     <main>
+        <section> <h1 hidden>Lorem ipsum dolor</h1>
       <ul class="list">
           <li><button class="filter" type="button">All</button></li>
           <li><button type="button" class="filter">Web Site</button></li>
@@ -67,7 +68,7 @@
     <li><a class="link" href="./"><img src="images/image12.jpg" alt="Barista making coffee" width="360">
     <h3 class="header-three">Fresh Coffee</h3><p class="text">Web Site</p></a></li>
       </ul>
-
+    </section>
     </main>
     <footer>
     <a class="logo" href="./index.html"><span class="logo1">Web</span><span class="logo-two">Studio</span></a>
