--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <nav>
          <a class="logo" class="link" href="./index.html">Web<span class="logo-one">Studio</span></a>
          <ul class="list">
-            <li class="nav-link"><a class="nav" class="link" href="./index.html">Studio</a></li>
-            <li class="nav-link"><a class="nav" class="link" href="./portfolio.html">Portfolio</a></li>
-            <li class="nav-link"><a class="nav" class="link" href="">Contacts</a></li>
+            <li class="nav-link"><a class="nav link" href="./index.html">Studio</a></li>
+            <li class="nav-link"><a class="nav link" href="./portfolio.html">Portfolio</a></li>
+            <li class="nav-link"><a class="nav link" href="">Contacts</a></li>
          </ul>
       </nav>
       <address class="contact">
@@ -47,11 +47,11 @@
     for Your Business</h1>
       <button type="button" class="button">Order Service</button></section>
    <section><h2 hidden>Lorem, ipsum dolor.</h2>
-   <ul class="list" class="text">
+   <ul class="list text">
      <li><h3 class="header-three">Strategy</h3>
     <p class="text"> Our goal is to identify the business
     problem to walk away with the perfect and creative solution.</p></li>
-    <li><h3 class="header-three>Punctuality</h3>
+    <li><h3 class="header-three">Punctuality</h3>
     <p class="text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
     </li>
     <li><h3 class="header-three">Diligence</h3>
@@ -85,7 +85,7 @@
    </main>
 
    <footer>
-    <a class="logo" href="./index.html"><span class="logo1">Web</span><span class="logo-two">Studio</span></a>
+   <a class="logo" class="link" href="./index.html">Web<span class="logo-one">Studio</span></a>
     <p class="footer-desc"> Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
    </footer>
 
