--- a/portfolio.html
+++ b/portfolio.html
@@ -27,9 +27,9 @@
         <nav>
             <a class="logo" class="link" href="./index.html">Web<span class="logo-one">Studio</span></a>
             <ul class="list">
-                <li class="nav-link"><a class="nav" class="link" href="./index.html">Studio</a></li>
-                <li class="nav-link"><a class="nav" class="link" href="./portfolio.html">Portfolio</a></li>
-                <li class="nav-link"><a class="nav" class="link" href="">Contacts</a></li>
+                <li class="nav-link"><a class="nav link" href="./index.html">Studio</a></li>
+                <li class="nav-link"><a class="nav link" href="./portfolio.html">Portfolio</a></li>
+                <li class="nav-link"><a class="nav link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="contact">
@@ -70,8 +70,8 @@
       </ul>
     </section>
     </main>
-    <footer>
-    <a class="logo" href="./index.html"><span class="logo1">Web</span><span class="logo-two">Studio</span></a>
+    <footer class="footer">
+    <a class="logo" class="link" href="./index.html">Web<span class="logo-one">Studio</span></a>
     <p class="footer-desc"> Increase the flow of customers and sales for your business with digital marketing & growth
     solutions.</p>
     </footer>
