--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body class="main">
    <header>
       <nav>
-         <a class="logo" class="link" href="./index.html">Web<span class="logo-one">Studio</span></a>
+         <a class="logo link" href="./index.html">Web<span class="logo-one">Studio</span></a>
          <ul class="list">
             <li class="nav-link"><a class="nav link" href="./index.html">Studio</a></li>
             <li class="nav-link"><a class="nav link" href="./portfolio.html">Portfolio</a></li>
@@ -85,7 +85,7 @@
    </main>
 
    <footer>
-   <a class="logo" class="link" href="./index.html">Web<span class="logo-one">Studio</span></a>
+   <a class="logo link" href="./index.html">Web<span class="logo-one">Studio</span></a>
     <p class="footer-desc"> Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
    </footer>
 
