--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
 <body class="main">
     <header>
         <nav>
-            <a class="logo" class="link" href="./index.html">Web<span class="logo-one">Studio</span></a>
+            <a class="logo link" href="./index.html">Web<span class="logo-one">Studio</span></a>
             <ul class="list">
                 <li class="nav-link"><a class="nav link" href="./index.html">Studio</a></li>
                 <li class="nav-link"><a class="nav link" href="./portfolio.html">Portfolio</a></li>
@@ -71,7 +71,7 @@
     </section>
     </main>
     <footer class="footer">
-    <a class="logo" class="link" href="./index.html">Web<span class="logo-one">Studio</span></a>
+    <a class="logo link" href="./index.html">Web<span class="logo-one">Studio</span></a>
     <p class="footer-desc"> Increase the flow of customers and sales for your business with digital marketing & growth
     solutions.</p>
     </footer>
