--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     
 </head>
 <body class="main">
+
    <header>
       <nav>
          <a class="logo link" href="./index.html">Web<span class="logo-one">Studio</span></a>
@@ -37,11 +38,12 @@
       </nav>
       <address class="contact">
          <ul class="list">
-            <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111" class="contact">+11 (000) 111-11-11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="contact link">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111" class="contact link">+11 (000) 111-11-11</a></li>
          </ul>
       </address>
    </header>
+
    <main>
    <section class="section-one"> <h1 class="header-one">Effective Solutions
     for Your Business</h1>
@@ -61,31 +63,31 @@
     <p class="text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
     </li>
     </ul></section>
-    <section><h2 class="header-two">What are we doing</h2> 
-    <ul class="pic-list">
+    <section class="section-four"><h2 class="header-two">What are we doing</h2> 
+    <ul class="list">
     <li><img src="./images/image1.jpg" alt="Charts on a computer screen" width="360"></li>
     <li><img src="./images/image2.jpg" alt="Four phone screens" width="360"></li>
     <li><img src="./images/image3.jpg" alt="Opened article on a phone screen" width="360"> </li></ul></section>
-    <section><h2 class="header2">Our Team</h2>
-    <ul class="pic-list">
+    <section><h2 class="header-two">Our Team</h2>
+    <ul class="list">
     <li> <img src="./images/mark.jpg" alt="Mark Guerrero" width="264">
     <h3 class="header-three">Mark Guerrero</h3>
-    <p>Product Designer</p></li>
+    <p class="text">Product Designer</p></li>
     <li><img src="./images/tom.jpg" alt="Tom Ford" width="264">
     <h3 class="header-three">Tom Ford</h3>
-    <p>Frontend Developer</p>
+    <p class="text">Frontend Developer</p>
     </li>
     <li><img src="./images/camila.jpg" alt="Camila Garcia" width="264">
     <h3 class="header-three">Camila Garcia</h3>
-    <p>Marketing</p></li>
+    <p class="text">Marketing</p></li>
     <li><img src="./images/daniel.jpg" alt="Daniel Wilson" width="264">
     <h3 class="header-three">Daniel Wilson</h3>
-    <p>UI Designer</p></li>
+    <p class="text">UI Designer</p></li>
     </ul></section>
    </main>
 
-   <footer>
-   <a class="logo link" href="./index.html">Web<span class="logo-one">Studio</span></a>
+   <footer class="footer">
+   <a class="logo link" href="./index.html">Web<span class="logo-two">Studio</span></a>
     <p class="footer-desc"> Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
    </footer>
 
