--- a/portfolio.html
+++ b/portfolio.html
@@ -34,8 +34,8 @@
         </nav>
         <address class="contact">
             <ul class="list">
-                <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111" class="contact">+11 (000) 111-11-11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="contact link">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="contact link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
@@ -48,33 +48,34 @@
           <li><button class="filter" type="button">Design</button></li>
           <li><button class="filter" type="button">Marketing</button></li>
       </ul>
-      <ul class="pic-list">
-        <li><a class="link" href="./"><img src="images/image4.jpg" alt="Phone screen showing an app" width="360">
+      <ul class="list">
+        <li><a class="link" href="./"><img src="./images/image4.jpg" alt="Phone screen showing an app" width="360">
         <h3 class="header-three">Banking App Interface Concept</h3><p class="text"> App</p></a></li>
-    <li><a class="link" href="./"><img src="images/image5.jpg" alt="Phone screen with a QR code on it" width="360">
+    <li><a class="link" href="./"><img src="./images/image5.jpg" alt="Phone screen with a QR code on it" width="360">
        <h3 class="header-three">Cashless Payment</h3><p class="text">Marketing</p></a></li>
-    <li><a class="link" href="./"><img src="images/image6.jpg" alt="Phone and laptop screens" width="360">
+    <li><a class="link" href="./"><img src="./images/image6.jpg" alt="Phone and laptop screens" width="360">
      <h3 class="header-three">Meditation App</h3><p class="text">App</p></a></li>
-    <li><a class="link" href="./"><img src="images/image7.jpg" alt="Hands on a steering wheel" width="360">
+    <li><a class="link" href="./"><img src="./images/image7.jpg" alt="Hands on a steering wheel" width="360">
     <h3 class="header-three">Taxi Service</h3><p class="text">Marketing</p></a></li>
-    <li><a class="link" href="./"><img src="images/image8.jpg" alt="Five phone screens" width="360">
+    <li><a class="link" href="./"><img src="./images/image8.jpg" alt="Five phone screens" width="360">
     <h3 class="header-three">Screen Illustrations</h3><p class="text">Design</p></a></li>
-    <li><a class="link" href="./"><img src="images/image9.jpg" alt="Girl looking on a phone screen and smiling" width="360">
+    <li><a class="link" href="./"><img src="./images/image9.jpg" alt="Girl looking on a phone screen and smiling" width="360">
     <h3 class="header-three">Online Courses</h3><p class="text">Marketing</p></a></li>
-    <li><a class="link" href="./"><img src="images/image10.jpg" alt="Samples of Instagram stories" width="360">
+    <li><a class="link" href="./"><img src="./images/image10.jpg" alt="Samples of Instagram stories" width="360">
     <h3 class="header-three">Instagram Stories Concept</h3><p class="text">Design</p></a></li>
-    <li><a class="link" href="./"><img src="images/image11.jpg" alt="A woman carrying a grocery bag" width="360">
+    <li><a class="link" href="./"><img src="./images/image11.jpg" alt="A woman carrying a grocery bag" width="360">
     <h3 class="header-three">Organic Food</h3><p class="text">Web Site</p></a></li>
-    <li><a class="link" href="./"><img src="images/image12.jpg" alt="Barista making coffee" width="360">
+    <li><a class="link" href="./"><img src="./images/image12.jpg" alt="Barista making coffee" width="360">
     <h3 class="header-three">Fresh Coffee</h3><p class="text">Web Site</p></a></li>
       </ul>
     </section>
     </main>
-    <footer class="footer">
-    <a class="logo link" href="./index.html">Web<span class="logo-one">Studio</span></a>
+<footer class="footer">
+    <a class="logo link" href="./index.html">Web<span class="logo-two">Studio</span></a>
     <p class="footer-desc"> Increase the flow of customers and sales for your business with digital marketing & growth
-    solutions.</p>
-    </footer>
+        solutions.</p>
+</footer>
+
     </body>
     
     </html>
